# Website-V1

./: .replit  404.html  README.md  index.html  main.sh  mkdocs.yml  onboot.sh  pyproject.toml  scripts.py
.github/workflows/: build.yml
docs/: 404.html  contact.md  index.html  sitemap.xml
docs/about/: index.html
docs/contact/: index.html
docs/ideas/: index.html  index.md  waveform.md
docs/ideas/waveform/: index.html
docs/license/: index.html
docs/package/: index.html  scroll.md
docs/package/clear/: index.html
docs/package/color/: index.html
docs/package/load/: index.html
docs/package/parser/: index.html
docs/package/scroll/: index.html
docs/posts/exit-0-mc/: index.html
docs/posts/rest-api/: index.html
docs/projects/: image-flipper.md  notepad.md  text-dump-engine.md
docs/projects/console-rain/: index.html
docs/projects/image-flipper/: index.html
docs/projects/notepad/: index.html
docs/projects/presspy/: index.html
docs/projects/pybooklib/: index.html
docs/projects/text-dump-engine/: index.html
docs/search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/about/: index.html
site/contact/: index.html
site/ideas/: index.html
site/license/: index.html
site/package/: index.html
site/search/: search_index.json
src/: about.md  index.md  license.md
src/package/: clear.md  color.md  index.md  load.md  parser.md
src/posts/: exit-0-mc.md
src/projects/: console-rain.md  image-flipper.md  notepad.md  presspy.md  pybooklib.md  text-dump-engine.md
src/tutorials/: rest-api.md
(+10 files in other folders)
